# RaspberryPiMPU

./: .gitmodules  CMakeLists.txt  ICMCali.json  MPUCali.json  README.md  TestModule.cpp
src/: CMakeLists.txt  FFTPlugin.hpp  MPU.hpp  MPUProcess.hpp  MadgwickAHRS.hpp
src/ICM20602/: ICM20602.cpp  ICM20602.hpp
src/ICM42605/: ICM42605.cpp  ICM42605.hpp
src/MPU9250/: Drive_LinuxSPI.h  FFTPlugin.hpp  MPU9250.hpp  MadgwickAHRS.hpp
src/_thirdparty/LinuxDriver/SPI/: Drive_Custom.h  Drive_LinuxSPI.h  Drive_PIGPIO.h
