set(MPUDriver "pigpio" CACHE  INTERNAL "")

cmake_minimum_required (VERSION 3.8)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_definitions(-DDEBUG)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
project(RPiMPU)
add_subdirectory(src)
add_executable (RaspberryPiMPU "TestModule.cpp")
target_link_libraries(RaspberryPiMPU ${RPiMPU})